--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -15,12 +15,22 @@
 <div class="top__background">
     <div class="top">
         <a href="index.html"><img class="top__sign" src="assets/images/avicii-sign.svg" alt="Avicii sign"></a>
+
+        <div class="nav__dropdown">
+            <img src="assets/icons/menu.png" alt="Menu" class="nav__dropdown-img">
+            <ul class="nav__dropdown-content">
+                <li><a href="biography.html">Biography</a></li>
+                <li><a href="rankings.html">Track list</a></li>
+                <li><a href="memories.html">Memories</a></li>
+                <li><a href="avicii-fm.html">AVICII FM</a></li>
+            </ul>
+        </div>
+
         <ul class="nav">
-            <li><a href="pages/biography.html">Biography</a></li>
-            <li><a href="pages/rankings.html">Track list</a></li>
-            <li><a href="pages/memories.html">Memories</a></li>
-            <li><a href="pages/foundation.html">Foundation</a></li>
-            <li><a href="pages/avicii-fm.html">Contacts</a></li>
+            <li><a href="biography.html">Biography</a></li>
+            <li><a href="rankings.html">Track list</a></li>
+            <li><a href="memories.html">Memories</a></li>
+            <li><a href="avicii-fm.html">AVICII FM</a></li>
         </ul>
     </div>
 </div>
@@ -45,57 +55,111 @@
         <div class="artist__wrapper">
             <figure>
                 <blockquote>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut autem dicta doloremque eaque error
-                        esse ex
-                        exercitationem facere fugit, laudantium molestias nisi odit pariatur quasi quia quis velit vero
-                        voluptatibus?
+                    <p>“He had so much energy. We talked about how we look at the society. He was the person that didn’t
+                        use his phone. He had his phone off every second we spent time together. He traveled abroad to
+                        Africa to try to find himself again. What we saw was a strong, healthy person that was really,
+                        really alive. That’s the part that I feel is left out right now. That’s what we saw of Tim and
+                        what we will always remember.”
                     </p>
                 </blockquote>
-                <figcaption>On</figcaption>
+                <figcaption>Lagola</figcaption>
             </figure>
-            <img src="assets/images/avicii-stature2.png" alt="stature" width="150px">
+            <img src="assets/colleague/lagola.png" alt="stature" class="artist__image">
         </div>
 
         <div class="artist__wrapper">
             <figure>
                 <blockquote>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut autem dicta doloremque eaque error
-                        esse ex
-                        exercitationem facere fugit, laudantium molestias nisi odit pariatur quasi quia quis velit vero
-                        voluptatibus?
+                    <p>“The good thing was that I had Tim in my head. He was very clear about what he wanted. He’d speak
+                        to you and you knew how Tim felt about the song. For any work that I needed to finish, I knew
+                        the shapes that he was searching for.”
                     </p>
                 </blockquote>
-                <figcaption>On</figcaption>
+                <figcaption>Joe Janiak</figcaption>
             </figure>
-            <img src="assets/images/avicii-stature2.png" alt="stature" width="150px">
+            <img src="assets/colleague/janiak.png" alt="stature" class="artist__image">
         </div>
 
         <div class="artist__wrapper">
             <figure>
                 <blockquote>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut autem dicta doloremque eaque error
-                        esse ex
-                        exercitationem facere fugit, laudantium molestias nisi odit pariatur quasi quia quis velit vero
-                        voluptatibus?
+                    <p>“There are a lot of folks out there dealing with mental health issues and Tim was one of them.
+                        Song “SOS” was his opportunity, I think, to probably help himself, but in a large way, help
+                        others.”
                     </p>
                 </blockquote>
-                <figcaption>On</figcaption>
+                <figcaption>Aloe Blacc</figcaption>
             </figure>
-            <img src="assets/images/avicii-stature2.png" alt="stature" width="150px">
+            <img src="assets/colleague/blacc.png" alt="stature" class="artist__image">
         </div>
 
         <div class="artist__wrapper">
             <figure>
                 <blockquote>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut autem dicta doloremque eaque error
-                        esse ex
-                        exercitationem facere fugit, laudantium molestias nisi odit pariatur quasi quia quis velit vero
-                        voluptatibus?
+                    <p>”I was poor, busking my way through LA., songwriting everyday, and eating oatmeal for two years
+                        and me and a friend sent some tracks to Avicii's camp - we're all Swedish so we sort of knew
+                        them - and out of 2000 songs he was sent for the Stories album he chose two of ours. That was
+                        the start of my relationship with Tim and from then when we were writing in the studio together
+                        we just clicked.”
                     </p>
                 </blockquote>
-                <figcaption>On</figcaption>
+                <figcaption>Sandro Cavazza</figcaption>
             </figure>
-            <img src="assets/images/avicii-stature2.png" alt="stature" width="150px">
+            <img src="assets/colleague/cavazza.png" alt="stature" class="artist__image">
+        </div>
+
+        <div class="artist__wrapper">
+            <figure>
+                <blockquote>
+                    <p>”Something really horrible happened. We lost a friend with such a beautiful heart and the world
+                        lost an incredibly talented musician. Thank you for your beautiful melodies, the time we shared
+                        in the studio, playing together as djs or just enjoying life as friends.”
+                    </p>
+                </blockquote>
+                <figcaption>David Guetta</figcaption>
+            </figure>
+            <img src="assets/colleague/guetta.png" alt="stature" class="artist__image">
+        </div>
+
+        <div class="artist__wrapper">
+            <figure>
+                <blockquote>
+                    <p>”He was not focused on anything else but just the vibe. He doesn’t care about the
+                        latest plugins or the latest hypes. He could like switch off and only be focused on what’s
+                        important right now and just wanted to make music. That’s something that I really admired and
+                        really stuck with me since the beginning. If you were with him, it felt like nothing else
+                        mattered but that studio session, but that song, and that particular chord for example. He was
+                        really good at that. He was very focused only on music.”
+                    </p>
+                </blockquote>
+                <figcaption>Nicky Romero</figcaption>
+            </figure>
+            <img src="assets/colleague/romeo.png" alt="stature" class="artist__image">
+        </div>
+
+        <div class="artist__wrapper">
+            <figure>
+                <blockquote>
+                    <p>”I have no words. I remember how amazing it was to make Lonely Together and it felt like just
+                        yesterday we were talking. Condolences to Avicii's family, friends, and the fans who supported
+                        him. May he rest in peace. Gone too soon. I’m devastated. Heartbroken.”
+                    </p>
+                </blockquote>
+                <figcaption>Rita Ora</figcaption>
+            </figure>
+            <img src="assets/colleague/ora.png" alt="stature" class="artist__image">
+        </div>
+
+        <div class="artist__wrapper">
+            <figure>
+                <blockquote>
+                    <p>”Working with Avicii was one of my favorite sessions. he was incredibly passionate, humble and
+                        sweet. his energy was incredibly real and contagious. We all miss you Tim.”
+                    </p>
+                </blockquote>
+                <figcaption>Dan Reynolds</figcaption>
+            </figure>
+            <img src="assets/colleague/reynolds.png" alt="stature" class="artist__image">
         </div>
     </div>
 </div>
@@ -104,24 +168,21 @@
         <div class="footer__main">
             <div class="footer__about">
                 <h2>About</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet asperiores, dolorem eaque
-                    earum
-                    eligendi</p>
+                <p>Tyto webové stránky jsou semestrálním projektem na předmět TNPW1.</p>
             </div>
             <div class="footer__links">
                 <h2>Subpages</h2>
                 <ul>
-                    <li><a href="pages/biography.html">Biography</a></li>
-                    <li><a href="pages/rankings.html">Track list</a></li>
-                    <li><a href="pages/memories.html">Memories</a></li>
-                    <li><a href="pages/foundation.html">Foundation</a></li>
-                    <li><a href="pages/avicii-fm.html">Contacts</a></li>
+                    <li><a href="biography.html">Biography</a></li>
+                    <li><a href="rankings.html">Track list</a></li>
+                    <li><a href="memories.html">Memories</a></li>
+                    <li><a href="avicii-fm.html">AVICII FM</a></li>
                 </ul>
             </div>
         </div>
         <div class="footer__second">
             <div class="footer__copyright">
-                <p>copyright dsfsdf</p>
+                <a href="https://github.com/ingui-n">Dominik Král</a>
             </div>
             <div>
                 <img src="assets/images/avicii-logo.svg" alt="Avicii sign">
