--- a/memories.html
+++ b/memories.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="icon" href="../assets/images/avicii-logo.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="../styles/default.css">
-    <link rel="stylesheet" href="../styles/memories.css">
+    <link rel="icon" href="assets/images/avicii-logo.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="styles/default.css">
+    <link rel="stylesheet" href="styles/memories.css">
     <title>AVICII</title>
 </head>
 <body>
 <div class="top__background">
     <div class="top">
-        <a href="../index.html"><img class="top__sign" src="../assets/images/avicii-sign.svg" alt="Avicii sign"></a>
+        <a href="index.html"><img class="top__sign" src="assets/images/avicii-sign.svg" alt="Avicii sign"></a>
+
+        <div class="nav__dropdown">
+            <img src="assets/icons/menu.png" alt="Menu" class="nav__dropdown-img">
+            <ul class="nav__dropdown-content">
+                <li><a href="biography.html">Biography</a></li>
+                <li><a href="rankings.html">Track list</a></li>
+                <li><a href="memories.html">Memories</a></li>
+                <li><a href="avicii-fm.html">AVICII FM</a></li>
+            </ul>
+        </div>
+
         <ul class="nav">
-            <li><a href="../pages/biography.html">Biography</a></li>
-            <li><a href="../pages/rankings.html">Track list</a></li>
-            <li><a href="../pages/memories.html">Memories</a></li>
-            <li><a href="foundation.html">Foundation</a></li>
-            <li><a href="avicii-fm.html">Contacts</a></li>
+            <li><a href="biography.html">Biography</a></li>
+            <li><a href="rankings.html">Track list</a></li>
+            <li><a href="memories.html">Memories</a></li>
+            <li><a href="avicii-fm.html">AVICII FM</a></li>
         </ul>
     </div>
 </div>
@@ -29,11 +39,13 @@
     <div>
         <h2>Share Your Memory Of Avicii</h2>
         <form action="" class="share">
-            <label for="name">Your Name:</label>
-            <input type="text" id="name">
+            <label for="name" class="label__name">Your Name:
+                <input type="text" id="name">
+            </label>
             <br>
-            <label for="message" class="label__message">Message:</label>
-            <textarea name="message" id="message" cols="30" rows="10"></textarea>
+            <label for="message" class="label__message">Message:
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+            </label>
             <br>
             <input type="submit" value="Submit" class="share__submit">
         </form>
@@ -156,29 +168,26 @@
         <div class="footer__main">
             <div class="footer__about">
                 <h2>About</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet asperiores, dolorem eaque
-                    earum
-                    eligendi</p>
+                <p>Tyto webové stránky jsou semestrálním projektem na předmět TNPW1.</p>
             </div>
             <div class="footer__links">
                 <h2>Subpages</h2>
                 <ul>
-                    <li><a href="../pages/biography.html">Biography</a></li>
-                    <li><a href="../pages/rankings.html">Track list</a></li>
-                    <li><a href="../pages/memories.html">Memories</a></li>
-                    <li><a href="foundation.html">Foundation</a></li>
-                    <li><a href="avicii-fm.html">Contacts</a></li>
+                    <li><a href="biography.html">Biography</a></li>
+                    <li><a href="rankings.html">Track list</a></li>
+                    <li><a href="memories.html">Memories</a></li>
+                    <li><a href="avicii-fm.html">AVICII FM</a></li>
                 </ul>
             </div>
         </div>
         <div class="footer__second">
             <div class="footer__copyright">
-                <p>copyright dsfsdf</p>
+                <a href="https://github.com/ingui-n">Dominik Král</a>
             </div>
             <div>
-                <img src="../assets/images/avicii-logo.svg" alt="Avicii sign">
-                <img src="../assets/images/avicii-logo.svg" alt="Avicii sign">
-                <img src="../assets/images/avicii-logo.svg" alt="Avicii sign">
+                <img src="assets/images/avicii-logo.svg" alt="Avicii sign">
+                <img src="assets/images/avicii-logo.svg" alt="Avicii sign">
+                <img src="assets/images/avicii-logo.svg" alt="Avicii sign">
             </div>
         </div>
     </div>
